Iteration 2 - creating recipes folder, japanese-curry.html page, and linking new page in index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <a href="recipes/japanese-curry.html">Japanese Curry</a>
     
 </body>
 </html>
