--- a/recipes/japanese-curry.html
+++ b/recipes/japanese-curry.html
@@ -6,6 +6,53 @@
 </head>
 <body>
     <h1>Japanese Curry</h1>
-    
+    <img src="../images/japanese-curry.jpg" alt="Japanese Curry">
+    <h2>Description</h2>
+    <p>Japanese curry, known for its comforting and rich flavor, is a delightful blend of mild spices and hearty ingredients. Unlike its Indian counterpart, Japanese curry boasts a thick, luscious texture, achieved through a slow simmering process that melds flavors beautifully. Typically, it features tender chunks of meat, such as chicken, beef, or pork, accompanied by an assortment of vegetables like carrots, potatoes, and onions.</p>
+    <p>The sauce, often a harmonious mix of curry roux, apples, honey, and soy sauce, offers a unique balance of sweetness and savory depth. Served over a bed of fluffy steamed rice, Japanese curry provides a soul-warming experience, perfect for any occasion. Garnished with pickled vegetables or a soft-boiled egg, this dish embodies the essence of comfort food, bringing a taste of Japan’s culinary artistry to your table.</p>
+    <h2>Ingredients</h2>
+    <h3>For the Curry Roux</h3>
+    <ul>
+        <li>3 tablespoons butter</li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>1 tablespoon curry powder</li>
+        <li>1 teaspoon garam masala</li>
+    </ul>
+    <h3>For the Curry</h3>
+    <ul>
+        <li>500 grams (1 lb) chicken, beef, or pork, cut into bite-sized pieces</li>
+        <li>1 large onion, chopped</li>
+        <li>2 medium carrots, sliced</li>
+        <li>2 medium potatoes, peeled and cut into chunks</li>
+        <li>1 apple, grated</li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>3 cups water or chicken broth</li>
+        <li>1 tablespoon soy sauce</li>
+        <li>1 tablespoon Worcestershire sauce</li>
+        <li>1 tablespoon honey</li>
+        <li>Salt and pepper, to taste</li>
+    </ul>
+    <h3>For Serving</h3>
+    <ul>
+        <li>Steamed rice</li>
+        <li>Pickled vegetables</li>
+        <li>Soft-boiled eggs</li>
+    </ul>
+    <h3>Garnish (Optional)</h3>
+    <ul>
+        <li>Chopped green onions</li>
+        <li>Chopped Parsley or cilantro</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large pot, heat the vegetable oil over medium heat. Add the onions and cook until softened.</li>
+        <li>Add the meat and cook until browned on all sides.</li>
+        <li>Add the carrots, potatoes, and grated apple. Stir to combine.</li>
+        <li>Pour in the water or chicken broth. Bring to a boil, then reduce heat and simmer until the vegetables are tender.</li>
+        <li>In a separate saucepan, melt the butter over low heat. Add the flour, curry powder, and garam masala. Cook, stirring constantly, until the mixture turns golden brown.</li>
+        <li>Gradually add the roux to the pot of curry, stirring until thickened.</li>
+        <li>Season with soy sauce, Worcestershire sauce, honey, salt, and pepper. Adjust the seasoning to taste.</li>
+        <li>Serve the curry over steamed rice, garnished with pickled vegetables, soft-boiled eggs, and chopped green onions or parsley.</li>
+    </ol>
 </body>
 </html>
