--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
     <h1>Odin Recipes</h1>
 <ul>
-    <a href="recipes/japanese-curry.html">Japanese Curry</a>
+    <li><a href="recipes/japanese-curry.html">Japanese Curry</a></li>
+    <li><a href="recipes/birria-tacos.html">Birria Tacos</a></li>
 </ul>
     
     
