Iteration 3 - creating chicken alfredo pasta recipe page with content

--- a/recipes/birria-tacos.html
+++ b/recipes/birria-tacos.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Birria Tacos</h1>
-    <img src="../images/birria-tacos..jpg" alt="Birria Tacos" width="600px" height="600px">
+    <img src="../images/birria-tacos..jpg" alt="Birria Tacos" width="600" height="600">
     <h2>Description</h2>
     <p>Birria tacos are a culinary delight from Mexico, featuring tender, slow-cooked meat marinated in a vibrant blend of dried chiles, spices, and herbs. The meat, cooked until melt-in-your-mouth tender, is shredded and served in warm corn tortillas, topped with fresh onions, cilantro, and a squeeze of lime, creating a perfect balance of smoky, spicy, and savory flavors.</p>
     <p>Accompanied by a rich consommé made from the meat’s cooking juices, these tacos are dipped before each bite, enhancing their depth and complexity. Optional garnishes like avocado slices and thinly sliced radishes add a beautiful and delicious touch, making birria tacos a truly unforgettable culinary experience.</p>
