--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
     <li><a href="recipes/japanese-curry.html">Japanese Curry</a></li>
     <li><a href="recipes/birria-tacos.html">Birria Tacos</a></li>
+    <li><a href="recipes/chicken-alfredo.pasta.html">Chicken Alfredo</a></li>
 </ul>
     
     
